# tauri-audiopresence

./: README.md  package.json
.github/workflows/: publish.yml  test.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
