[package]
name = "tauri-audiopresence"
version = "0.1.3"
description = "A Tauri app for updating Discord Rich Presence with currently playing media metadata."
authors = ["envis10n"]
license = ""
repository = ""
default-run = "tauri-audiopresence"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
audiopresence = { git = "https://github.com/envis10n/audiopresence", rev = "2b23bdb" }
discord-rich-presence = "0.2.0"
crossbeam = "0.8.1"
tokio = { version = "1", features = ["time"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
